[gd_scene load_steps=27 format=3 uid="uid://cug6kav5s55iq"]

[ext_resource type="Script" uid="uid://bptf21x2a24jj" path="res://scripts/imager_gel_band_logic.gd" id="1_7wmgd"]
[ext_resource type="Script" uid="uid://p0x2f70nn1sy" path="res://scripts/selectable_canvas_group.gd" id="1_w2ofj"]
[ext_resource type="Texture2D" uid="uid://cslhw30pcab3a" path="res://textures/lab_objects/imager/imager.svg" id="3_p46ws"]
[ext_resource type="Script" uid="uid://ul3h2acp7c3y" path="res://scripts/attachment_interactable_area.gd" id="4_7wmgd"]
[ext_resource type="Texture2D" uid="uid://bxlubb0tdgn5x" path="res://textures/lab_objects/imager/imager_open_inside_and_door.svg" id="4_oxmjg"]
[ext_resource type="Script" uid="uid://ciw88e6ajyksw" path="res://scripts/zoom_selectable_area.gd" id="4_ylekj"]
[ext_resource type="Script" uid="uid://kqpdop5g7bqv" path="res://scripts/zoom_aware_control.gd" id="6_18obo"]
[ext_resource type="Texture2D" uid="uid://d3dbby0blgo04" path="res://textures/gel_bands/Gel_Rig_Top_View.svg" id="6_p46ws"]
[ext_resource type="Script" uid="uid://b810schxe1hne" path="res://scripts/interact_info.gd" id="6_u3h3s"]
[ext_resource type="Script" uid="uid://b15sd4jw5afoa" path="res://scripts/camera_region_provider.gd" id="7_au8w4"]
[ext_resource type="Texture2D" uid="uid://c3rfj3vqah8ph" path="res://textures/gel_bands/Gel_Well_Top_View_LADDER_MULTIPLE.svg" id="7_p0nad"]
[ext_resource type="Texture2D" uid="uid://7mpyt0hujebl" path="res://textures/gel_bands/Gel_Well_Top_View_PERFECT.svg" id="8_us78d"]
[ext_resource type="Texture2D" uid="uid://bvt8quy2u6lr" path="res://textures/gel_bands/Gel_Well_Top_View_DIFFUSED.svg" id="9_ryau1"]
[ext_resource type="Texture2D" uid="uid://c105io6i6gmyg" path="res://textures/gel_bands/Gel_Well_Top_View_PERFECT_9slice.svg" id="10_v62sd"]
[ext_resource type="Texture2D" uid="uid://71b12miprvm5" path="res://textures/gel_bands/Gel_Well_Top_View_SMUDGE.svg" id="11_hcb6o"]
[ext_resource type="Texture2D" uid="uid://b5xwngj4j0aco" path="res://textures/gel_bands/Gel_Well_Top_View_SMUDGE_2.svg" id="12_ylekj"]
[ext_resource type="Texture2D" uid="uid://coxjop7202awh" path="res://textures/gel_bands/Gel_Well_Top_View_WAVY.svg" id="13_deexq"]
[ext_resource type="Script" uid="uid://cs1o2bs2ponhi" path="res://scripts/subscene.gd" id="14_hcb6o"]
[ext_resource type="Texture2D" uid="uid://dqy8bu4f6vpyv" path="res://textures/gel_bands/Gel_Well_Top_View_WAVY_2.svg" id="14_r6ay8"]
[ext_resource type="Texture2D" uid="uid://i6l6i3doaich" path="res://textures/gel_bands/Gel_Well_Top_View_DIFFUSED_9slice.svg" id="15_ryau1"]
[ext_resource type="Script" uid="uid://b5a5765epdkf" path="res://scripts/subscene_camera.gd" id="17_ylekj"]
[ext_resource type="Script" uid="uid://musakg3k6s1l" path="res://scripts/selectable_component.gd" id="20_oxmjg"]
[ext_resource type="Script" uid="uid://nf1enjfal72f" path="res://scripts/depth_managed_node_2d.gd" id="21_u3h3s"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_omd45"]
size = Vector2(167, 109.5)

[sub_resource type="Resource" id="Resource_u3h3s"]
script = ExtResource("6_u3h3s")
kind = 3
description = "Zoom in on imager screen"
metadata/_custom_type_script = "uid://b810schxe1hne"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_deexq"]
size = Vector2(133, 54)

[node name="GelImager" type="Node2D"]
script = ExtResource("1_7wmgd")

[node name="DepthManagedNode2D" type="Node2D" parent="."]
script = ExtResource("21_u3h3s")
depth_layer = 1
metadata/_custom_type_script = "uid://nf1enjfal72f"

[node name="AttachmentInteractableArea" type="Area2D" parent="DepthManagedNode2D" node_paths=PackedStringArray("selectable_canvas_group")]
unique_name_in_owner = true
position = Vector2(0, 70)
script = ExtResource("4_7wmgd")
place_prompt = "Put in imager"
selectable_canvas_group = NodePath("../../ImagerDoorGroup")
body_group_filter_type = 1
metadata/_custom_type_script = "uid://ul3h2acp7c3y"

[node name="CollisionShape2D" type="CollisionShape2D" parent="DepthManagedNode2D/AttachmentInteractableArea"]
position = Vector2(0, -33.25)
shape = SubResource("RectangleShape2D_omd45")

[node name="ImagerDoorGroup" type="CanvasGroup" parent="."]
script = ExtResource("1_w2ofj")
metadata/_custom_type_script = "uid://p0x2f70nn1sy"

[node name="Imager" type="Sprite2D" parent="ImagerDoorGroup"]
unique_name_in_owner = true
scale = Vector2(0.327149, 0.327149)
texture = ExtResource("3_p46ws")

[node name="ImagerOpenInsideAndDoor" type="Sprite2D" parent="ImagerDoorGroup"]
unique_name_in_owner = true
visible = false
position = Vector2(-3, -0.9999995)
scale = Vector2(0.26431274, 0.26431274)
texture = ExtResource("4_oxmjg")

[node name="ZoomSelectableArea" type="Node2D" parent="." node_paths=PackedStringArray("subscene_camera")]
script = ExtResource("4_ylekj")
subscene_camera = NodePath("../Subscene/SubsceneCamera")
interact_info = SubResource("Resource_u3h3s")
metadata/_custom_type_script = "uid://ciw88e6ajyksw"

[node name="Area2D" type="Area2D" parent="ZoomSelectableArea"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ZoomSelectableArea/Area2D"]
position = Vector2(-0.5, -71)
shape = SubResource("RectangleShape2D_deexq")
debug_color = Color(0.961975, 0.191001, 0.110021, 0.42)

[node name="CameraRegionProvider" type="Node2D" parent="ZoomSelectableArea"]
script = ExtResource("7_au8w4")

[node name="Camera2D" type="Camera2D" parent="ZoomSelectableArea/CameraRegionProvider"]
position = Vector2(2, -7)
enabled = false
zoom = Vector2(5.5, 3)

[node name="ZoomAwareControl" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("6_18obo")
metadata/_custom_type_script = "uid://kqpdop5g7bqv"

[node name="UV Light" type="Button" parent="ZoomAwareControl"]
unique_name_in_owner = true
z_index = 2000
layout_mode = 1
anchors_preset = -1
anchor_top = -0.65000004
anchor_bottom = -0.65000004
offset_left = -4.0
offset_top = -3.999998
offset_right = 4.0
offset_bottom = 4.000002

[node name="ClosedDoor" type="TextureButton" parent="ZoomAwareControl"]
layout_mode = 0
offset_left = 68.0
offset_top = -40.0
offset_right = 82.0
offset_bottom = 92.0

[node name="GelWellTopViewLadderMultiple" type="Sprite2D" parent="."]
visible = false
modulate = Color(1, 1, 1, 0)
self_modulate = Color(1, 1, 1, 0)
position = Vector2(3, -223)
scale = Vector2(0.444733, 0.444733)
texture = ExtResource("7_p0nad")

[node name="GelWellTopViewPerfect" type="Sprite2D" parent="."]
visible = false
position = Vector2(-52.5156, -278.516)
scale = Vector2(0.438414, 0.438414)
texture = ExtResource("8_us78d")

[node name="GelWellTopViewDiffused" type="Sprite2D" parent="."]
visible = false
position = Vector2(-53.3359, -278.336)
scale = Vector2(0.40159, 0.40159)
texture = ExtResource("9_ryau1")

[node name="GelWellTopViewPerfect9Slice" type="Sprite2D" parent="."]
visible = false
position = Vector2(-52.1953, -269.195)
scale = Vector2(0.376553, 0.376553)
texture = ExtResource("10_v62sd")

[node name="GelWellTopViewSmudge" type="Sprite2D" parent="."]
visible = false
position = Vector2(-52.1641, -279.164)
scale = Vector2(0.177357, 0.177357)
texture = ExtResource("11_hcb6o")

[node name="GelWellTopViewSmudge2" type="Sprite2D" parent="."]
visible = false
position = Vector2(-51.8672, -277.867)
scale = Vector2(0.173885, 0.173885)
texture = ExtResource("12_ylekj")

[node name="GelWellTopViewWavy" type="Sprite2D" parent="."]
visible = false
position = Vector2(-52.5, -278.516)
scale = Vector2(0.157895, 0.122442)
texture = ExtResource("13_deexq")

[node name="GelWellTopViewWavy2" type="Sprite2D" parent="."]
visible = false
position = Vector2(-52.5, -277.516)
scale = Vector2(0.169591, 0.135234)
texture = ExtResource("14_r6ay8")

[node name="GelWellTopViewDiffused9Slice" type="Sprite2D" parent="."]
visible = false
position = Vector2(-53, -268)
scale = Vector2(0.331506, 0.331506)
texture = ExtResource("15_ryau1")

[node name="Subscene" type="ReferenceRect" parent="."]
top_level = true
offset_left = 381.0
offset_top = -275.0
offset_right = 986.0
offset_bottom = 368.0
script = ExtResource("14_hcb6o")
metadata/_custom_type_script = "uid://cs1o2bs2ponhi"

[node name="GelRigTopView" type="Sprite2D" parent="Subscene"]
modulate = Color(0.250213, 0.250213, 0.250213, 1)
position = Vector2(301, 314)
texture = ExtResource("6_p46ws")

[node name="Well1" type="Node2D" parent="Subscene"]
unique_name_in_owner = true
position = Vector2(98.5848, 92.2047)
scale = Vector2(0.969638, 1.00427)

[node name="Well2" type="Node2D" parent="Subscene"]
unique_name_in_owner = true
position = Vector2(163.185, 92.2047)
scale = Vector2(0.969638, 1.00427)

[node name="Well3" type="Node2D" parent="Subscene"]
unique_name_in_owner = true
position = Vector2(225.633, 92.2047)
scale = Vector2(0.969638, 1.00427)

[node name="Well4" type="Node2D" parent="Subscene"]
unique_name_in_owner = true
position = Vector2(288.08, 92.2047)
scale = Vector2(0.969638, 1.00427)

[node name="Well5" type="Node2D" parent="Subscene"]
unique_name_in_owner = true
position = Vector2(350.527, 92.2047)
scale = Vector2(0.969638, 1.00427)

[node name="SubsceneCamera" type="Camera2D" parent="Subscene"]
position = Vector2(143, 160)
anchor_mode = 0
editor_draw_screen = false
script = ExtResource("17_ylekj")
region_size = Vector2(330, 300)
metadata/_custom_type_script = "uid://b5a5765epdkf"

[node name="SelectableComponent" type="Node2D" parent="." node_paths=PackedStringArray("interact_canvas_group")]
script = ExtResource("20_oxmjg")
interact_canvas_group = NodePath("../ImagerDoorGroup")
metadata/_custom_type_script = "uid://musakg3k6s1l"

[connection signal="pressed" from="ZoomAwareControl/UV Light" to="." method="_on_uv_light_pressed"]
[connection signal="pressed" from="ZoomAwareControl/ClosedDoor" to="." method="on_gel_removed"]
[connection signal="pressed" from="SelectableComponent" to="." method="_on_door_selectable_pressed"]
